<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="de.hhn.aib.swlab.wise1920.group05.exercise2.viewModel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        tools:context=".view.LoginActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/loginUsernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/username"
            app:layout_constraintBottom_toTopOf="@+id/loginUsernameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/loginUsernameEditText"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={loginViewModel.username}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/loginPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/loginPasswordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginUsernameEditText"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/loginRegisterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/not_registered_yet"
            app:layout_constraintBottom_toTopOf="@+id/signUpButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@={loginViewModel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginUsernameEditText"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{loginViewModel::onLoginButtonClick}"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/signUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordEditText"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{loginViewModel::onSignUpButtonClick}"
            android:text="@string/sign_up_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>