<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerViewModel"
            type="de.hhn.aib.swlab.wise1920.group05.exercise2.viewModel.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.RegisterActivity">

        <TextView
            android:id="@+id/registerUsernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/username"
            app:layout_constraintBottom_toTopOf="@+id/registerUsernameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:text="@={registerViewModel.username}"
            android:hint="@string/username"
            android:id="@+id/registerUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/registerPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/registerPasswordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerUsernameEditText"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:text="@={registerViewModel.password}"
            android:hint="@string/password"
            android:id="@+id/registerPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerUsernameEditText"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/registerDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/registerDescriptionEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:text="@={registerViewModel.description}"
            android:hint="@string/description"
            android:id="@+id/registerDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText"
            android:importantForAutofill="no" />

        <Button
            android:onClick="@{registerViewModel::onCancelButtonClick}"
            android:id="@+id/cancelRegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="102dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/registerButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerDescriptionEditText"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:onClick="@{registerViewModel::onRegisterButtonClick}"
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelRegisterButton"
            app:layout_constraintTop_toBottomOf="@+id/registerDescriptionEditText"
            app:layout_constraintVertical_bias="1.0" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>